--- a/pom.xml
+++ b/pom.xml
@@ -16,20 +16,18 @@
           This can be skipped if the artifactId is the same as the repository name.
           Testing this out as it's needed for multi-module projects.
           see: https://stackoverflow.com/a/58021709
-          see: https://github.com/alexarchambault/test-gh-package-registry-2/blob/master/pom.xml
+          see: https://github.com/Enfernuz/JavaTrans2Quik/blob/master/pom.xml
         -->
         <repository>
             <id>github</id>
             <name>GitHub jc776 Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/jc776</url>
+            <url>https://maven.pkg.github.com/jc776/actions-deploy-example-maven</url>
         </repository>
     </distributionManagement>
     <scm>
-        <connection>scm:git:https://github.com/jc776/actions-deploy-example-maven.git</connection>
-        <developerConnection>scm:git:https://github.com/jc776/actions-deploy-example-maven.git</developerConnection>
         <url>https://github.com/jc776/actions-deploy-example-maven</url>
+        <connection>scm:git:git@github.com:jc776/actions-deploy-example-maven.git</connection>
     </scm>
-
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
