--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -24,6 +24,6 @@ jobs:
         java-version: 1.8
 
     - name: Publish to GitHub Packages
-      run: mvn -x -B deploy
+      run: mvn -e -B deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
