--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -24,6 +24,8 @@ jobs:
         java-version: 1.8
 
     - name: Publish to GitHub Packages
-      run: mvn -e -B deploy
       env:
+        GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run:
+        mvn --settings settings.xml deploy
